# cursussen-ehb

./: .gitattributes  .gitignore  README.md  Voorbeeldexamen IT Essentials.docx  main.py  merge-repo.sh  pyproject.toml  serveros.backup  serveros.rtsz  test.java
DesktopOS/: Desktop OS - Win_We1.docx  Sorteer.txt  oplossingen Desktop OS - Linux.docx
Les1/: AIE_1.ipynb  AIE_notebook_1.ipynb
Les10/: Q-Learning-CliffWalking.ipynb  Q-Learning-FrozenLake.ipynb
Les11/: NLP.ipynb
Les12/: DL with TensorFlow.ipynb
Les13/: Search Algorithms.ipynb
Les2/: Python oefeningen deel 1.ipynb
Les3/: Pyhton oefeningen deel 2.ipynb  Python_oef_2.ipynb
Les4/: Classification-Solution.ipynb  Classification.ipynb
Les5/: Regression.ipynb  normalize_regression.ipynb
Les6/: Datascience Tutorial - Titanic Part 1-3.ipynb
Les7/: clustering-solutions.ipynb  clustering.ipynb
ai-essentials/: .gitignore  pyproject.toml
ai-essentials/Les10/: Q-Learning-CliffWalking_solution.ipynb
ai-essentials/Les13/: LLM.ipynb  chatter-max.py
ai-essentials/Les2/: Python_oef_1.ipynb  Python_oef_1_solutions.ipynb
ai-essentials/Les3/: Python_oef_2_solution.ipynb
ai-essentials/Les4/: Classification-Solution.ipynb  Classification.ipynb  Classification_normalized.ipynb  normalize_classification.ipynb
ai-essentials/Les5/: Regression-Solutions.ipynb  normalize_regression.ipynb
ai-essentials/Les6/: Datascience Tutorial - Titanic Part 1-3.ipynb  submission.csv
ai-essentials/Les8/: Datascience Tutorial - Titanic Dataset Notebook.ipynb
ai-essentials/Les9/: semi-supervised_learning.ipynb
(+832 files in other folders)
