[project]
name = "aie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.2",
    "gym>=0.26.2",
    "gymnasium[classic-control]>=1.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "yellowbrick>=1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.6.3",
]

[tool.uv.workspace]
members = ["AIE"]
